Fix: Fixed overflow being cut off for adult programs in mobile mode

--- a/public/css/adult-programs-style.css
+++ b/public/css/adult-programs-style.css
@@ -62,7 +62,9 @@
 @media(max-width: 880px) {
 
   .programs-adult {
-    margin-top: 44px;
+    margin-top: 5px;
+
+    gap: 4rem;
   }
   
   .program-adult {
@@ -70,11 +72,18 @@
     align-items: center;
     justify-content: center;
 
+    gap: 1rem;
+
     text-align: center;
   }
 
   .program-adult div {
     align-items: center;
+    height: 27rem;
+  }
+
+  .program-adult img {
+    width: 325px;
   }
 
   .program-adult span {
